Added a simple html introductory screen to the game

--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Battleships!</title>
   </head>
-  <body></body>
+  <body>
+    <div id="header">
+      <h1>Battleships</h1>
+    </div>
+    <div id="board-container">
+      <div id="introduction">
+        <h2>Sink all enemy ships to win!</h2>
+        <div class="colour-info">
+          <div class="water">Water</div>
+          <div class="ship">Your ship</div>
+          <div class="hit">Hit</div>
+        </div>
+        <button>Start Game</button>
+      </div>
+    </div>
+  </body>
 </html>
