Added further UI interactivity

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <h2>Sink all enemy ships to win!</h2>
         <div class="colour-info">
           <div class="water">Water</div>
-          <div class="ship">Your ship</div>
+          <div class="ship">Ship</div>
           <div class="hit">Hit</div>
         </div>
         <button>Start Game</button>
